24 Jan 2008 - 2.5.0-rc2
-----------------------

 * Fixed removal of chained rules via ctl:ruleRemoveById.

 * Implemented SecUploadFileMode to allow setting the mode for uploaded files.

 * Implemented "block" action.

 * No longer log the query portion of the URI in the error log as
   it may contain sensitive data.

 * There are no longer any default transformations performed.

 * Implemented SecRuleUpdateActionById.

 * Cleanup documentation.

 * Phase 5 rules can now be removed via SecRuleRemoveBy* directives.

 * Build is now 'configure' based (autotools).


21 Dec 2007 - 2.5.0-rc1
-----------------------

Changes since 2.5.0-dev2:

 * Added support for Lua scripting in the following ways: SecRuleScript
   can be used to specify a script to execute as a rule, the exec
   action processes Lua scripts internally, and does the @inspectFile
   operator. Refer to the documentation for more details.

 * Updated included Core Ruleset to version 1.5.1.

 * Changed how allow works. Used on its own it now allows phases 1-4. Used
   with parameter "phase" (e.g. SecAction allow:phase) it only affects
   the current phase. Used with parameter "request" it allows phases
   1-2.

 * Fixed issue where only the first phase 5 rule would run when the
   request was intercepted in an earlier phase.

 * Updated included Core Ruleset to version 1.5 and noted in the docs that
   XML support is required to use the rules without modification.

 * Stricter configuration parsing.  Disruptive actions, meta actions and
   phases are no longer allowed in a chained rule.  Disruptive actions,
   are no longer allowed in a logging phase (phase 5) rule, including
   inheriting from SecDefaultAction.

 * More efficient collection persistance.

 * Fixed t:escapeSeqDecode to better follow ANSI C escapes.

 * Added t:jsDecode to decode JavScript escape sequences.

 * Added IS_NEW built-in collection variables.

 * New audit log part 'K' logs all matching rules.
